# swap_comparator

./: LICENSE  README.md  example.env  pyproject.toml  pytest.ini  requirement.txt
swap_comparator/: __init__.py  __main__.py  constant.py  log_config.py
swap_comparator/utils/: __init__.py  constant.py  utils_0x.py  utils_1inch.py  utils_lifi.py  utils_odos.py  utils_paraswap.py
tests/utils/: test_utils_0x.py  test_utils_1inch.py  test_utils_lifi.py  test_utils_odos.py  test_utils_paraswap.py
utils/: 1inch.py  constant.py
