[project]
name = "swap_comparator"
version = "1.0.0"
description = "A Python package to retreive data from several APIs."
authors = [
    { name = "Tijoxa", email = "92037181+Tijoxa@users.noreply.github.com" },
]
dependencies = ["aiohttp", "python-dotenv", "requests"]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-explicit"]

[tool.pytest.ini_options]
markers = ["api: run API tests"]
explicit-only = ["api"]

[tool.ruff]
line-length = 149

[tool.ruff.lint]
ignore = ["F401"]
